# vortis

./: .gitignore  PUBLISHING.md  README.md  async_tcp.py  main.py  protocol.py  pyproject.toml  pytest.ini  requirements.txt  store.py  sync_tcp.py
.github/: CODEOWNERS
.github/workflows/: tests.yml
docs/: eviction-plan.md
eviction/: __init__.py  sizer.py
eviction/policies/: __init__.py  noeviction.py  random_policy.py
scripts/: benchmark.py  stress_test.py
src/vortis/: __init__.py  __main__.py  async_tcp.py  protocol.py  resp.py  store.py  sweeper.py  sync_tcp.py
src/vortis/eviction/: __init__.py  base.py
src/vortis/eviction/policies/: __init__.py  noeviction.py  random_policy.py
tests/: test_async_tcp.py  test_eviction.py  test_protocol.py  test_store.py  test_sweeper.py  test_sync_commands.py  test_sync_tcp.py
